package hcmuaf.edu.vn.fit.grading_service;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;
import org.springframework.cloud.client.discovery.EnableDiscoveryClient;
import org.springframework.cloud.openfeign.EnableFeignClients;

@SpringBootApplication
@EnableDiscoveryClient
@EnableFeignClients
public class GradingServiceApplication {

	public static void main(String[] args) {
		SpringApplication.run(GradingServiceApplication.class, args);
	}

}
